# server-chat

./: .gitignore  CMakeLists.txt  help.md  test  test.cpp
GateServer/: CMakeLists.txt  hello.proto
GateServer/include/: INIReader.hpp  http_server.hpp  mysql_connection.hpp  mysql_connection_pool.hpp  mysql_dao.hpp  mysql_manager.hpp  statusGrpcClient.hpp  verifyGrpcClient.hpp
GateServer/src/: client.cpp  http_server.cpp  main.cpp  server.cpp  verifyGrpcClient.cpp
StatusServer/: CMakeLists.txt
StatusServer/include/: statusServiceImpl.hpp
StatusServer/src/: main.cpp
TcpChatServer/: CMakeLists.txt
TcpChatServer/include/: my_tcp_server.hpp  redis_connection_pool.hpp
TcpChatServer/src/: client.cpp  main.cpp  redis_connection_pool.cpp
common/: Singleton.hpp  common.hpp  json.hpp
common/config/: config.ini
common/proto/: message.proto
